--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -81,12 +81,42 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="environment-basic-operations">Environment Basic Operations</h1>
 
-<p>After logging to the portal and creating an environment, there are several actions (operations) that can be done via the available buttons: start, stop, rebuild, delete, scale up/ scale down, export and also boost and deploy the repository.</p>
-<p><img src="images/basic-operations-all.png" alt="buttons"></p>
+<p>After logging to the portal, go to the Environments tab on the left menu &gt; you will see available two buttons: Refresh and New Environment.</p>
+<p>After creating an environment, there are several actions (operations) that can be done via the available buttons: clone, edit, delete, start, stop, rebuild, export the database, boost and deploy the repository and also using the endpoints related to T24, the database or to the repository.
+<br></p>
+<p><img src="images/buttons-all.png" alt="buttons"></p>
 <p><br></p>
+<p><img src="images/button-refresh.png" alt="start"> <strong>Refreshing</strong> the page:</p>
+<ul>
+<li>Use this button to refresh any action in progress (related to an environment but also to a factory).</li>
+</ul>
+<p><br></p>
+<p><img src="images/button-new-environment.png" alt="start"> <strong>Creating</strong> a new environment:</p>
+<ul>
+<li>Displays the fields required to create an environment. here you can give a name and a description to your environment and choose a template.</li>
+</ul>
+<p><br></p>
+<p><img src="images/button-clone.png" alt="start"> <strong>Cloning</strong> an environment:</p>
+<ul>
+<li>Creates an identical environment by copying the Environment and configuration repository.</li>
+</ul>
+<p><br></p>
+<p><img src="images/button-edit.png" alt="start"> <strong>Editing</strong> an environment:</p>
+<ul>
+<li>Allows you to change the name and the description of an environment.</li>
+</ul>
+<p><br></p>
+<p><img src="images/button-delete.png" alt="delete"> <strong>Deleting</strong> and environment:</p>
+<ul>
+<li>Stops all instances of an Application in the Environment, removes all resources including configuration repository.</li>
+</ul>
 <p><img src="images/button-start.png" alt="start"> <strong>Starting</strong> an environment:</p>
 <ul>
-<li>After creating an environment, the Start button is automatically disabled as the environment is running. It will be enabled if an environment is stopped and it will start all the instances specified in the Environment configuration.</li>
+<li><p>After creating an environment, the Start button is automatically disabled as the environment is running. It will be enabled if an environment is stopped and it will start all the instances specified in the Environment configuration.</p>
+</li>
+<li><p>When the environment is stopped, start button is supposed to start the VMs where the database and the application server of a T24 environment are installed and also to start the application server (jboss, wildfly, WebSphere, etc.) so that T24 to be up and running. </p>
+</li>
+<li>However, please <strong>note</strong> that start button is not triggering also the deployment of whatever is present into the associated Git repository (like something that was committed when the environment was stopped or a T24 update package ( L1 development) that was not yet successfully deployed to the T24 area).</li>
 </ul>
 <p><br></p>
 <p><img src="images/button-stop.png" alt="stop"> <strong>Stopping</strong>  an environment:</p>
@@ -98,16 +128,6 @@
 <ul>
 <li>It recreates the resourses into the cloud and re-installs T24 and H2 db.</li>
 <li>This is used for example when modifying the application templates (like changing the T24 displayed name or addign a new application).</li>
-</ul>
-<p><br></p>
-<p><img src="images/button-delete.png" alt="delete"> <strong>Deleting</strong> and environment:</p>
-<ul>
-<li>Stops all instances of an Application in the Environment, removes all resources including configuration repository.</li>
-</ul>
-<p><br></p>
-<p><img src="images/button-scale.png" alt="scale"> <strong>Scaling up and down</strong> an environment:</p>
-<ul>
-<li>Increases, respectively decreases the running instances of the Application) – via the UI.</li>
 </ul>
 <p><br></p>
 <p><img src="images/button-export.png" alt="export"> <strong>Exporting</strong> an environment and exporting the database:</p>
@@ -123,11 +143,6 @@
 <p><img src="images/button-deploy.png" alt="deploy"><strong>Deploying</strong></p>
 <ul>
 <li>To be used when deploying newly added plugins, endpoints, updates, web services, packages etc.</li>
-</ul>
-<p><br></p>
-<p><strong>Cloning</strong> an environment:</p>
-<ul>
-<li>Creates an identical environment by copying the Environment and configuration repository</li>
 </ul>
 <p><br></p>
 <div class="NOTE"><h5>Note</h5><p><span style="color:RED"><strong>IMPORTANT!</strong></span></p>
