--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -131,8 +131,11 @@ See further below how to generate the SSH key</p>
 </ul>
 <p><img src="images/user-list.png" alt="user"></p>
 <ul>
-<li><p>You have the option to edit or to delete it.</p>
-</li>
+<li>You have the option to edit or to delete it.</li>
+</ul>
+<div class="NOTE"><h5>Note</h5><p>Once created, you <strong>cannot</strong> change the name and the email address, nor the user&#39;s password. You can only update (or add) the SSH key through edit button.</p>
+</div>
+<ul>
 <li><p>Your username will be created in Gitlab server and public SSH key provided will be added to your account being accessible from all the environments created in your organisation.</p>
 </li>
 <li><p>For further details or issues related to Gitlab SSH keys usage, or other operating systems (MAC, Linux), please consult this link:  <a href="https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/">https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/</a></p>
