--- a/home/architecture.html
+++ b/home/architecture.html
@@ -205,7 +205,7 @@
 </table>
 <h3 id="enterprise-view"><strong>Enterprise View</strong></h3>
 <p>This section provides an overview of what the TCD solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
-<p><img src="images/enterprise-view.png" alt="">
+<p><img src="./images/enterprise-view.png" alt="">
 <em>Enterprise View</em></p>
 <p>The TCD solution is composed of the <strong>Extend</strong> and <strong>Assemble</strong> modules to enable the provision of development and Integration test environments. The current state allows for these two modules only. Roadmap features envisage a Deliver module to cover pre-production and production environments.</p>
 <p>The <strong>TCD Extend module</strong> is a multi-tenanted provisioning and deployment module that provides Users and/or other systems with self-service management of Environments and provides access to the tools for enhancing Client Licensed Temenos Software. The Extend module enables authorised Users to provision Environments from a list of Templates for non-production use during development, test, integration, implementation and ongoing changes to the Products. The Extend module is a cloud-hosted platform service and manages Environments in either the Temenos cloud or a Client’s Target Cloud account.</p>
