--- a/home/enterprise-view.html
+++ b/home/enterprise-view.html
@@ -82,7 +82,7 @@
 <h1 id="enterprise-view">Enterprise View</h1>
 
 <p>This section provides an overview of what the TCD solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
-<p><img src="./images/enterprise-view.png" alt=""></p>
+<p><img src="images/enterprise-view.png" alt=""></p>
 <p><strong>Note:</strong> </p>
 <p><strong><em>UTP</em></strong> <em>is the Unified Temenos Platform, an exclusively internal Temenos program and an umbrella term for work related to improving the way we develop, build, test and release software.</em></p>
 <p>The TCD solution is composed of the <strong><em>Extend</em></strong> and <strong><em>Assemble</em></strong> modules to enable the provision of development and Integration test environments. The current state allows for these two modules only. Roadmap features envisage a Deliver module to cover pre-production and production environments.</p>
