--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -108,7 +108,8 @@
 <p>temn.tafj.jdbc.url=jdbc:h2:tcp://<strong>ENV_DNS</strong>:9092/TAFJDB;MODE=Oracle;TRACE_LEVEL_FILE=0;
 TRACE_LEVEL_SYSTEM_OUT=0;DB_CLOSE_ON_EXIT=FALSE;
 FILE_LOCK=NO;IFEXISTS=TRUE;CACHE_SIZE=131072;
-MVCC=TRUE;LOCK_TIMEOUT=30000<br> <span style="color:red">Replace <strong>ENV_DNS</strong> with <strong>your environment DNS</strong>.</span></p>
+MVCC=TRUE;LOCK_TIMEOUT=30000<br> <span style="color:red">Replace <strong>ENV_DNS</strong> with <strong>your environment DNS</strong>.</span> See below example:</p>
+<p><img src="images/ds-dns-example.png" alt="design studio template project"></p>
 <h2 id="create-new-project-in-design-studio">Create New Project in Design Studio</h2>
 <p>In order to accomplish the development actions presented at the beginning of the guide, you need to create a new project in Design Studio.</p>
 <ul>
