--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -157,10 +157,12 @@ MVCC=TRUE;LOCK_TIMEOUT=30000<br> <span style="color:red">Replace <strong>ENV_DNS
 </li>
 </ul>
 <p><img src="images/t24-created-projects.png" alt="created projects"></p>
+<p>Make sure you save the change CTRL+S.</p>
 <p><br></p>
 <h2 id="uncheck-xml-for-local-fields">Uncheck XML for Local Fields</h2>
 <p>Go to ft-sample-models &gt; click right and select Properties &gt; expand Design Studio &gt; click Code Generation &gt; expand All Categories &gt; Uncheck XML for Local Fields (LT/RTL)</p>
 <p><img src="images/t24-ft-sample-xml.png" alt="uncheck xml"></p>
+<p>Make sure you save the change CTRL+S.</p>
 <h2 id="create-new-t24-server-in-design-studio">Create New T24 Server in Design Studio</h2>
 <p>A T24 Server is required in Design Studio to be able to import/export applications/enquiries/versions from/to your sandbox. Follow next steps to create and configure a T24 server:</p>
 <ul>
