--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -162,8 +162,10 @@ MVCC=TRUE;LOCK_TIMEOUT=30000<br> <span style="color:red">Replace <strong>ENV_DNS
 <h2 id="uncheck-xml-for-local-fields">Uncheck XML for Local Fields</h2>
 <p>Go to ft-sample-models &gt; click right and select Properties &gt; expand Design Studio &gt; click Code Generation &gt; expand All Categories &gt; Uncheck XML for Local Fields (LT/RTL)</p>
 <p><img src="images/t24-ft-sample-xml.png" alt="uncheck xml"></p>
-<p>Make sure you save the change CTRL+S.</p>
+<p>Click Apply and OK.</p>
 <h2 id="create-new-t24-server-in-design-studio">Create New T24 Server in Design Studio</h2>
+<div class="NOTE"><h5>Note</h5><p>Check first if you already have available the <strong>Servers</strong> tab. If not, follow below steps.</p>
+</div>
 <p>A T24 Server is required in Design Studio to be able to import/export applications/enquiries/versions from/to your sandbox. Follow next steps to create and configure a T24 server:</p>
 <ul>
 <li><p>On servers tab, click right and select <strong>Add New T24 Server</strong>.<br><img src="images/add-server.png" alt="add server">
