--- a/home/toc.html
+++ b/home/toc.html
@@ -198,7 +198,7 @@
                           <a href="techguides/run-factory.html" name="" title="Run a Factory with &quot;Run Now&quot; Button and Dashboard">Run a Factory with &quot;Run Now&quot; Button and Dashboard</a>
                         </li>
                         <li>
-                          <a href="techguides/assemble-sanity-check.html" name="" title="Do Assemble Sanity Check">Do Assemble Sanity Check</a>
+                          <a href="./techguides/assemble-sanity-check.md" name="" title="Do Assemble Sanity Check">Do Assemble Sanity Check</a>
                         </li>
                       </ul>  </li>
                   <li>
