--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -112,16 +112,19 @@
 <ul>
 <li>In order to have access to the T24/ VM Cloud Application live folders, you can install an FTP client from <a href="https://winscp.net/eng/index.php">https://winscp.net/eng/index.php</a></li>
 <li>Open WinSCP application and fill the mandatory fields:<ul>
-<li>Host name &gt; copy it from the environment endpoint: sftp.temenos.cloud </li>
+<li>Host name &gt; copy it from the environment endpoint: sftp.temenos.cloud <em>(see image below)</em></li>
 <li>User name &gt; input the exact name of the user added to the portal</li>
 </ul>
 </li>
+</ul>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./images/access-ud-endpoint.png" alt="sftp fields"></p>
+<ul>
 <li>Click <strong>Advanced</strong></li>
 <li>In the new screen, select <strong>SSH Authentication</strong> </li>
 <li>Upload the private key previously saved (corresponding to the public key attached to the portal user)</li>
 <li>Click <strong>OK</strong></li>
 </ul>
-<p><img src="images/access-ud-sftp-fields.png" alt="sftp fields"></p>
+<p><img src="images/access-ud-sftp-fields.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>Previous screen pops-up, click <strong>Login</strong></li>
@@ -139,22 +142,33 @@
 </ul>
 <p><br></p>
 <ul>
-<li><span style="color:orange"><strong>default</strong></span> - <em>for example, here you can push a message file into the application that you need to test</em>. Here you can create a folder and add some files to it, if you need them to do some specific actions. This folder is supposed to point to the <strong>T24_HOME</strong> location.</li>
+<li><span style="color:orange"><strong>default</strong></span> - <em>for example, here you can push a message file into the application that you need to test</em>. </li>
+<li>Also into the <strong>default</strong> folder, you can create a folder and add some files to it, if you need them to do some specific actions. The folder you create/ add is supposed to point to the <strong>T24_HOME</strong> location.</li>
+<li>See below:<ul>
+<li>how to find which is the T24_HOME path.</li>
+<li>how to point to the T24_HOME path in order to get the response that you need for your application.</li>
 </ul>
-<p>In order to find out the T24_HOME path:</p>
+</li>
+</ul>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em><span style="color:#010466;font-size:14pt;">Find the T24_HOME path:</span></em></p>
 <ul>
 <li>Go to your environment on the portal </li>
 <li>Click on MONITOR APPLICATION</li>
-<li>Then on tdiag (the path will look similar to this: <a href="https://t24-1xxxxxxxxxxxxo.dev.temenos.cloud/TAFJEE/tDiag">https://t24-1xxxxxxxxxxxxo.dev.temenos.cloud/TAFJEE/tDiag</a>)  the xxx part represents your environment&#39;s id</li>
-<li>Scroll down a bit until you get to &quot;TAFJ Runtime properties&quot; section</li>
+<li>Login with your credentials</li>
+<li>Then click on tdiag (the path will look similar to this: <a href="https://t24-1xxxxxxxxxxxxo.dev.temenos.cloud/TAFJEE/tDiag">https://t24-1xxxxxxxxxxxxo.dev.temenos.cloud/TAFJEE/tDiag</a>)  the xxx part represents your environment&#39;s id</li>
+<li>Scroll down a bit until you get to &quot;<strong>TAFJ Runtime properties</strong>&quot; section</li>
 <li>Here you can see: temn.tafj.runtime.directory.current    /opt/rh/eap7/root/usr/share/wildfly/default</li>
 </ul>
 <ul>
-<li><p>If for example, you need to create a folder into the default location (/temenossftp/<em>yourorgid/yourenvid/yourenvid</em>/default) named &quot;demo&quot; then, in the T24 area the appropriate path will be <strong>/opt/rh/eap7/root/usr/share/wildfly/default/demo</strong>.</p>
+<li>If for example, you need to create a folder into the default location (/temenossftp/<em>yourorgid/yourenvid/yourenvid</em>/default) named &quot;demo&quot; then, in the T24 area the appropriate path will be <strong>/opt/rh/eap7/root/usr/share/wildfly/default/demo</strong>.</li>
+</ul>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em><span style="color:#010466;font-size:14pt;">Point to the T24_HOME path:</span></em></p>
+<p>Into the newly added folder (on default location), make sure you create a configuration file in which you set also the path to your folder.</p>
+<p>If for example you want to see a specific log for your application, you will be able to see this log into the <strong>log_t24</strong> folder (see below more details). In order to do so, make sure you add a log4j.properties file into the same folder (the newly created) where you specify the path for the logs of your app. </p>
+<p>EXAMPLE: log4j.appender.FileLog.file=/opt/rh/eap7/root/usr/share/wildfly/modules/com/temenos/tafj/main/log_T24/<em>your_app</em>.log</p>
+<p><br></p>
 <ul>
 <li><span style="color:orange"><strong>log_t24</strong></span>  - contains the T24.log files and also your como logs files when you run TSAs</li>
-</ul>
-</li>
 </ul>
 <p><img src="images/access-ud-como.png" alt="access ud directories schema"></p>
 <ul>
