--- a/home/toc.html
+++ b/home/toc.html
@@ -197,6 +197,9 @@
                         <li>
                           <a href="techguides/run-factory.html" name="" title="Run a Factory with &quot;Run Now&quot; Button and Dashboard">Run a Factory with &quot;Run Now&quot; Button and Dashboard</a>
                         </li>
+                        <li>
+                          <a href="techguides/artifactory-test-cycle.html" name="" title="Manage Artifactory Test Cycle">Manage Artifactory Test Cycle</a>
+                        </li>
                       </ul>  </li>
                   <li>
                     <span class="expand-stub"></span>
