--- a/home/toc.html
+++ b/home/toc.html
@@ -85,6 +85,9 @@
                 
                 <ul class="nav level2">
                   <li>
+                    <a href="tcd-hosting-options.html" name="" title="TCD Hosting Options">TCD Hosting Options</a>
+                  </li>
+                  <li>
                     <a href="temenos-cloud-templates.html" name="" title="Temenos Cloud Templates">Temenos Cloud Templates</a>
                   </li>
                 </ul>  </li>
