--- a/home/techguides/fcm-configuration.html
+++ b/home/techguides/fcm-configuration.html
@@ -82,16 +82,15 @@
 <h1 id="configure-fcm-application">Configure FCM Application</h1>
 
 <p>Learn how to use FCM application by accessing it via Temenos Cloud Platform.</p>
-<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=XBsmOZvg-z8" target="_blank"><strong>Video tutorial</strong>
+<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=XBsmOZvg-z8" target="_blank"><strong>Video tutorial</strong> - to be updated.
 </a></p>
 </div>
 <h2 id="about-fcm-template">About FCM Template</h2>
 <ul>
 <li>Login to your organization on the Temenos Cloud Platform (<a href="https://portal.temenos.cloud/">https://portal.temenos.cloud/</a>) using the username and password provided by the Temenos team</li>
 <li>Each time you login, you must accept the Privacy Notice in order to have access to the portal</li>
-<li>First page that is displayed after login is the <strong>Environments</strong> list, where you can see the available environments or you can create a new one</li>
-<li>Click the <strong>Templates</strong> tab to see the list of all templates available for your organization<ul>
-<li>Click <strong>FCM</strong> template to see the short description of the components and also the full template content</li>
+<li>Click the <strong>Templates Catalog</strong> on the left-side menu<ul>
+<li>Choose <strong>the FCM template</strong> version from the available list to see the short description of the components and also the full template content</li>
 <li>The listed information comes from an infratemplate.yml file that describes the template used for an environment</li>
 </ul>
 </li>
@@ -111,7 +110,7 @@
 <li>Select an application from <strong>Cloud native applications</strong></li>
 <li>Choose a template from <strong>Templates</strong> list</li>
 <li><em>Labels field is optional</em></li>
-<li>Click <strong>Create environment</strong></li>
+<li>Click <strong>Create</strong></li>
 </ul>
 <p><img src="images/fcm-environment-fields.png" alt="new environment"></p>
 <div class="NOTE"><h5>Note</h5><p>It will take about 15 minutes for the new environment to be created</p>
@@ -183,7 +182,7 @@ When disconnecting and re-connecting to the server, the <strong>input</strong> f
 <li>Go to <strong>Transaction Alert Manager</strong></li>
 <li>Check below the latest processed messages and click <strong>Open</strong> button to see the message details</li>
 </ul>
-<p><img src="images/fcm-check-messages.png" alt="check messages"></p>
+<p><img src="images/fcm-check-messages.png" alt="check messages"> </p>
 <p><br></p>
               <hr>
               
