--- a/home/techguides/troubleshooting.html
+++ b/home/techguides/troubleshooting.html
@@ -105,16 +105,19 @@
 </ul>
 <p><img src="images/export_env_3.png" alt="export env 3"></p>
 <ul>
-<li>Open <strong>WinSCP</strong> SFTP client and create a new site that will allow you to connect to the SFTP server. Make sure you put <em>sftp.temenos.cloud</em> Endpoint as Host name, your <em>PaaS user</em> as User name and instead of password, the SSH key related to your PaaS user must be used.
+<li>Open <strong>WinSCP</strong> SFTP client and create a new site that will allow you to connect to the SFTP server. Make sure you put <em>tcdSFTP.temenos.cloud</em> Endpoint as Host name, your <em>PaaS user</em> as User name and instead of password, the SSH key related to your PaaS user must be used.
 <img src="images/sftp_1.png" alt="sftp 1"></li>
 <li>In order to attach the SSH key, press <strong>Advanced</strong> button, go to <strong>Authentification</strong> menu and select the <strong>private key</strong> related to your PaaS user. 
 <img src="images/sftp_2.png" alt="sftp 2"></li>
 <li>After attaching your SSH key, save your site with any name for future use.
 <img src="images/sftp_3.png" alt="sftp 3"></li>
 <li>Click <strong>Login</strong> to connect to the SFTP server.<br>If connection is successful, you will have 2 sections in WinSCP:<br>-&gt; the left section(highlighted in black) represents the location from your local machine where the environment details will be downloaded.<br>-&gt; the right section(highlighted in yellow) represents the location of the exported environment details in the SFTP server; the environment details are saved in the SFTP server in /organisationID/environmentID folder structure.
-<img src="images/sftp_4.png" alt="sftp 4">  </li>
+<img src="./images/sftp_4.png" alt="sftp 4">  </li>
 <li>Go inside your environmentID folder and you will see a zip file that contains the Environment Details. In order to download the zip, select it and press F5.<br><img src="images/sftp_5.png" alt="sftp 5">  </li>
-<li>After downloading the zip file to your local machine, unzip it and you will have the bellow folder structure:<br><img src="images/sftp_6.png" alt="sftp 6"><br>Based on the above folder structure, you can check the following:<br>-&gt; If you deployed any update in your sandbox, check if jar/jars related to the update are changed in the jar list from <em>modules/com/temenos/t24/main</em> folder.<br>-&gt; If you deployed any package in your sandbox, check if the jar related to the package is present in <em>modules/com/temenos/t24/main/localjars</em> folder.<br>-&gt; If you deployed any war file in your sandbox, check if the war was deployed with success(a file named war_name.deployed should be present in <em>standalone\deployments</em> folder). The war deployment will be failed if a file named war_name.failed is present in <em>standalone\deployments</em> folder and this file must be checked for details.</li>
+<li>After downloading the zip file to your local machine, unzip it. Based on the template used, you will be able to see the below scenarios:
+<p><strong>a) For Extend-Templates</strong> - once you downloaded the file and unzipped it on your local machine, the below folders will appear<br><img src="images/sftp_6.png" alt="sftp 6"><br>  <strong>b) For Wildfly, Stack01 and Stack02 Templates</strong> - once you downloaded the file and unzipped it on your local machine, the below folders will appear:<br><img src="./images/sftp_7.png" alt="sftp 6"><br>Based on the above folder structure, you can check the following:<br>-&gt; If you deployed any update in your sandbox, check if jar/jars related to the update are changed in the jar list from <em>modules/com/temenos/t24/main</em> folder.<br>-&gt; If you deployed any package in your sandbox, check if the jar related to the package is present in <em>modules/com/temenos/t24/main/localjars</em> folder.<br>-&gt; If you deployed any war file in your sandbox, check if the war was deployed with success(a file named war_name.deployed should be present in <em>standalone\deployments</em> folder). The war deployment will be failed if a file named war_name.failed is present in <em>standalone\deployments</em> folder and this file must be checked for details.
+&gt; [!Note]
+&gt; For <em>Stack02 Template</em> in the &#39;appserver&#39; folder you will find &#39;installed apps&#39; folder instead of &#39;deployments&#39;.</li>
 </ul>
 </li>
 </ul>
@@ -159,11 +162,11 @@
 <div class="NOTE"><h5>Note</h5><p>In case you do not have the required JBOSS/DBTools credentials, please contact MarketPlace team at <br>marketplace-support@temenos.com.  </p>
 </div>
 <ul>
-<li>The next wizard will appear in which you can execute any DBTools command by following the next steps:<br>-&gt; Enter the DBTools user credentials in the <strong>Authentication</strong> section.<br>-&gt; In the <strong>Command</strong> section, select the command type from the <strong>Mode</strong> combo box, enter the command in the <strong>Argument</strong> field and optionally you can enter a name in the <strong>Log file name</strong> field.<br>-&gt; Click the <strong>Submit</strong> button to execute the command and a message will be displayed in the page.<br>-&gt; Depending on the command, an output will be generated and it will be available in the output list after pressing the <strong>Refresh</strong> button.<br><img src="images/dbtools_3.png" alt="dbtools 3">  </li>
+<li>The next wizard will appear in which you can execute any DBTools command by following the next steps:<br>-&gt; Enter the DBTools user credentials in the <strong>Authentication</strong> section.<br>-&gt; In the <strong>Command</strong> section, select the command type from the <strong>Mode</strong> combo box, enter the command in the <strong>Argument</strong> field and optionally you can enter a name in the <strong>Log file name</strong> field.<br>-&gt; Click the <strong>Execute command</strong> button to execute the command and a message will be displayed in the page.<br>-&gt; Depending on the command, an output will be generated and it will be available in the output list after pressing the <strong>Refresh</strong> button.<br><img src="images/dbtools_3.png" alt="dbtools 3">  </li>
 <li>For example, a JQL command is entered.<br><img src="images/dbtools_4.png" alt="dbtools 4">  </li>
-<li>After clicking the <strong>Submit</strong> button, a message is displayed.
+<li>After clicking the <strong>Execute command</strong> button, a message is displayed.
 <img src="images/dbtools_5.png" alt="dbtools 5">  </li>
-<li>Click the <strong>Refresh</strong> button and in the <strong>Output</strong> section, a log(containing the result of the DBTools command) will be displayed.<br><img src="images/dbtools_6.png" alt="dbtools 6">  </li>
+<li>Click the <strong>Refresh logs</strong> button and in the <strong>Output</strong> section, a log(containing the result of the DBTools command) will be displayed.<br><img src="images/dbtools_6.png" alt="dbtools 6">  </li>
 <li>Click the <strong>View</strong> button related to the generated log to view the result of the DBTools command.<br><img src="images/dbtools_7.png" alt="dbtools 7">  </li>
 </ul>
 <h1 id="3-import-data-eson-instead-of-d-record">3. Import Data Eson instead of .d record</h1>
